# cursor-usage-extension

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.base.json
apps/chrome-extension/: options.html  package.json  popup.html  tsconfig.json  vite.config.ts
apps/chrome-extension/src/: main-options.tsx  main-popup.tsx  manifest.ts  styles.css
apps/chrome-extension/src/background/: messages.ts  service-worker.ts  storage.ts
apps/chrome-extension/src/components/: Popup.tsx
apps/chrome-extension/src/pages/options/: App.tsx  tabState.test.ts  tabState.ts
apps/desktop-tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/src/: App.tsx  main.tsx  storage.ts  styles.css  syncPolicy.test.ts  syncPolicy.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: main.rs
